Fixed a pixel overlap at the left column

--- a/css/style.css
+++ b/css/style.css
@@ -105,6 +105,7 @@ body {
 	
 #left_menu li a:link, #left_menu li a:visited {
 	color: #FFF;
+	width : 180px;
 	display: block;
 	background: url(../images/nav-buttons.gif);
 	padding: 5px 0 1px 20px;
@@ -112,6 +113,7 @@ body {
 	
 #left_menu li a:hover, #left_menu li a:active {
 	color: #FFF;
+	width : 180px;
 	background: url(../images/nav-buttons.gif) 0 -32px;
 	padding: 5px 0 1px 20px;
 }
@@ -120,7 +122,7 @@ body {
 	font-family: Tahoma, Verdana, sans-serif, Helvetica;
 	color: #F5F5F5;
 	font-size: 10px;
-	padding: 6px;
+	padding: 0px;
 }
 
 #left_side_bar a:link, #LeftSideBar a:visited {
